Fixed the spacing between stats and values

--- a/src/components/404/pokemon.css
+++ b/src/components/404/pokemon.css
@@ -50,7 +50,7 @@ body.dark {
 .pokemon .stats ul li {
     display: grid;
     grid-template-areas: "key value";
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2fr 2fr;
 }
 
 .pokemon .stats ul .key {
